<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Product List</string>

    <string name="action_delete_all_entries">Delete All Products</string>

    <string name="empty_view_title_text">There is no book yet&#8230;</string>

    <string name="empty_view_subtitle_text">Get started by adding a book via plus button</string>

    <string name="editor_activity_title_new_product">Add a Product</string>

    <string name="editor_activity_title_edit_product">Edit Product</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="action_back">Back</string>

    <string name="back_dialog_message">Please enter quantity of book.</string>

    <string name="back_button">OK</string>

    <string name="editor_insert_product_successful">Product saved</string>

    <string name="editor_insert_product_failed">All information must be entered!</string>

    <string name="editor_update_product_successful">Product updated</string>

    <string name="editor_update_product_failed">All information must be entered!</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_product_successful">Product deleted</string>

    <string name="editor_delete_product_failed">Error with deleting product</string>

    <string name="delete_dialog_msg">Delete this product?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="product_name">Book Name</string>

    <string name="quantity">Quantity</string>

    <string name="category_price">Unit Price</string>

    <string name="supplier_name">Supplier Name</string>

    <string name="supplier_phone">Supplier Phone</string>

    <string name="hint_product_name">Name</string>

    <string name="hint_product_price">Price</string>

    <string name="unit_product_price">$</string>

    <string name="quantity_0">Select</string>

    <string name="quantity_1">1</string>
    <string name="quantity_2">2</string>
    <string name="quantity_3">3</string>
    <string name="quantity_4">4</string>
    <string name="quantity_5">5</string>
    <string name="quantity_6">6</string>
    <string name="quantity_7">7</string>
    <string name="quantity_8">8</string>
    <string name="quantity_9">9</string>
    <string name="quantity_10">10</string>
    <string name="quantity_11">11</string>
    <string name="quantity_12">12</string>
    <string name="quantity_13">13</string>
    <string name="quantity_14">14</string>
    <string name="quantity_15">15</string>
    <string name="quantity_16">16</string>
    <string name="quantity_17">17</string>
    <string name="quantity_18">18</string>
    <string name="quantity_19">19</string>
    <string name="quantity_20">20</string>

    <string name="hint_supplier_name">Supplier</string>

    <string name="hint_supplier_phone">Phone</string>

    <string name="bookName">Book Name: </string>

    <string name="Quantity">Quantity: </string>

    <string name="price">Price: </string>

    <string name="supplierName">Supplier Name: </string>

    <string name="supplierPhone">Supplier Phone: </string>

    <string name="SALE">SALE</string>

    <string name="image_upload">UPLOAD IMAGE</string>

    <string name="editButton">EDIT</string>

    <string name="deleteButton">DELETE</string>

    <string name="contactButton">CONTACT</string>

    <string name="plus">+</string>

    <string name="minus">-</string>

    <string name="link">goo.gl/UHswyF</string>

</resources>
